# aoc2022-rs

./: Cargo.toml
inputs/: day01.2  day02.2  day03.2  day04.2  day05.2  day06.2  day07.2  day08.2  day09.2  day10.2  day11.2
lib/common/: Cargo.toml
lib/common/src/: lib.rs  stack.rs
